force-app/main/default/objects/Multiple_Sertipikat_Atas_Nama__c/Multiple_Sertipikat_Atas_Nama__c.object-meta.xml
<CustomObject>
    <label>Multiple Sertipikat Atas Nama</label>
    <nameField>
        <label>Sertipikat Atas Nama Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Multiple Sertipikat Atas Nama</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>