force-app/main/default/objects/Multiple_Sertipikat_Atas_Nama__c/fields/Akta_Divorce_No__c.field-meta.xml
<CustomField>
    <fullName>Akta_Divorce_No__c</fullName>
    <label>Akta Divorce No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>