force-app/main/default/objects/Multiple_Sertipikat_Atas_Nama__c/fields/Akta_Married_No__c.field-meta.xml
<CustomField>
    <fullName>Akta_Married_No__c</fullName>
    <label>Akta Married No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>