force-app/main/default/objects/Multiple_Sertipikat_Atas_Nama__c/fields/Birth_Place_Pemilik_Sertipikat__c.field-meta.xml
<CustomField>
    <fullName>Birth_Place_Pemilik_Sertipikat__c</fullName>
    <label>Birth Place Pemilik Sertipikat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>