force-app/main/default/objects/Multiple_Sertipikat_Atas_Nama__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Multiple Sertipikat Atas Nama</relationshipLabel>
    <relationshipName>Multiple_Sertipikat_Atas_Nama</relationshipName>
    <type>Lookup</type>
</CustomField>